# wayla

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: notes.ipynb
docs/source/: api_index.rst  conf.py  index.rst
wayla/: __init__.py  analysis.py  diagnostics.py  eye_io.py  eye_model_fitting.py  eye_tracking.py  utils.py
